[gd_scene load_steps=25 format=2]

[ext_resource path="res://Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://sprites/platform.png" type="Texture" id=2]
[ext_resource path="res://stomp.tscn" type="PackedScene" id=3]
[ext_resource path="res://Main.gd" type="Script" id=4]
[ext_resource path="res://HUD.tscn" type="PackedScene" id=5]
[ext_resource path="res://tmp_stomp.tscn" type="PackedScene" id=6]
[ext_resource path="res://boost.tscn" type="PackedScene" id=7]
[ext_resource path="res://spring_stomp.tscn" type="PackedScene" id=8]
[ext_resource path="res://ufo_stomp.gd" type="Script" id=9]
[ext_resource path="res://sound/jump.wav" type="AudioStream" id=10]
[ext_resource path="res://sound/spring.wav" type="AudioStream" id=11]
[ext_resource path="res://sound/tmp_tile.wav" type="AudioStream" id=12]
[ext_resource path="res://sound/fly.wav" type="AudioStream" id=13]
[ext_resource path="res://sound/death.wav" type="AudioStream" id=14]
[ext_resource path="res://invis.tscn" type="PackedScene" id=15]
[ext_resource path="res://spikes.tscn" type="PackedScene" id=16]
[ext_resource path="res://sprites/flyer/flyer3.png" type="Texture" id=17]
[ext_resource path="res://sprites/flyer/flyer1.png" type="Texture" id=18]
[ext_resource path="res://sprites/flyer/flyer2.png" type="Texture" id=19]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 18 ), ExtResource( 19 ), ExtResource( 17 ) ],
"loop": true,
"name": "default",
"speed": 6.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 30.7692, 50 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 30.7609, 50.2588 )

[sub_resource type="PackedScene" id=4]
_bundled = {
"conn_count": 0,
"conns": PoolIntArray(  ),
"editable_instances": [  ],
"names": PoolStringArray( "ufo_stomp", "scale", "collision_layer", "script", "__meta__", "stomp", "KinematicBody2D", "AnimatedSprite", "position", "frames", "playing", "CollisionShape2D_1", "rotation", "shape", "CollisionShape2D", "Area2D" ),
"node_count": 5,
"node_paths": [  ],
"nodes": PoolIntArray( -1, -1, 6, 0, -1, 4, 1, 0, 2, 1, 3, 2, 4, 3, 1, 5, 0, 0, 7, 7, -1, 4, 8, 4, 1, 5, 9, 6, 10, 7, 0, 0, 0, 14, 11, -1, 3, 8, 8, 12, 9, 13, 10, 0, 0, 0, 15, 15, -1, 2, 8, 11, 2, 1, 1, 5, 3, 0, 14, 14, -1, 1, 13, 12, 0 ),
"variants": [ Vector2( 1.04028, 0.159176 ), 4, ExtResource( 9 ), {
"_edit_horizontal_guides_": [ 0.0, -16.0 ],
"_edit_vertical_guides_": [ -32.0, 32.0 ]
}, Vector2( 0, -50.2588 ), Vector2( 0.295778, 2.09412 ), SubResource( 1 ), true, Vector2( 0, -50 ), 9.42476, SubResource( 2 ), Vector2( 0, 50.2588 ), SubResource( 3 ) ],
"version": 2
}

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 296, 32 )

[node name="Main" type="Node2D"]
script = ExtResource( 4 )
__meta__ = {
"_edit_horizontal_guides_": [ 643.641 ],
"_edit_vertical_guides_": [ 1025.37 ]
}
Fan = ExtResource( 7 )
stompinst = ExtResource( 3 )
tmp_stompinst = ExtResource( 6 )
spring_stompinst = ExtResource( 8 )
ufo_stompinst = SubResource( 4 )
invis_stompinst = ExtResource( 15 )
spikes_inst = ExtResource( 16 )
game_ovg_scene_path = "res://Main.tscn"

[node name="HUD" parent="." instance=ExtResource( 5 )]

[node name="platform" type="Sprite" parent="."]
position = Vector2( 300, 960 )
scale = Vector2( 1, 2 )
texture = ExtResource( 2 )

[node name="Node" type="Node" parent="."]

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( 248, 800 )

[node name="fly" type="AudioStreamPlayer2D" parent="Player"]
position = Vector2( -620, -2000 )
scale = Vector2( 2.5, 2.5 )
stream = ExtResource( 13 )

[node name="death" type="AudioStreamPlayer2D" parent="Player"]
position = Vector2( -620, -2000 )
scale = Vector2( 2.5, 2.5 )
stream = ExtResource( 14 )

[node name="spring" type="AudioStreamPlayer2D" parent="Player"]
position = Vector2( -620, -2000 )
scale = Vector2( 2.5, 2.5 )
stream = ExtResource( 11 )

[node name="tmp_tile" type="AudioStreamPlayer2D" parent="Player"]
position = Vector2( -620, -2000 )
scale = Vector2( 2.5, 2.5 )
stream = ExtResource( 12 )

[node name="jump" type="AudioStreamPlayer2D" parent="Player"]
position = Vector2( -620, -2000 )
scale = Vector2( 2.5, 2.5 )
stream = ExtResource( 10 )

[node name="stomp" parent="." instance=ExtResource( 3 )]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 296, 912.082 )
scale = Vector2( 9.92028, 0.159176 )

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( 296, 1568 )
collision_layer = 2
collision_mask = 127

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 5 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[connection signal="start_game" from="HUD" to="." method="_on_HUD_start_game"]
[connection signal="flying" from="Player" to="." method="_on_Player_flying"]
[connection signal="on_spikes" from="Player" to="." method="_on_Player_on_spikes"]
[connection signal="on_spring" from="Player" to="." method="_on_Player_on_spring"]
[connection signal="on_stomp" from="Player" to="." method="_on_Player_on_stomp"]
[connection signal="on_tmp_tile" from="Player" to="." method="_on_Player_on_tmp_tile"]
[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
